fix add wallet address creator api
